--- a/client/src/components/Dashboard.css
+++ b/client/src/components/Dashboard.css
@@ -8,33 +8,10 @@
 
 .card.survey-1 {
 	height: 200px;
-	position: relative;
-	text-align: center;
-	background-size: cover;
-	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-		url(./images/bar-graph.jpg);
-}
-
-.card.survey-2 {
-	height: 200px;
-	position: relative;
-	text-align: center;
-	background-size: cover;
-	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-		url(./images/line-chart.png);
-}
-
-.card.survey-3 {
-	height: 200px;
-	position: relative;
-	text-align: center;
-	background-size: cover;
-	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-		url(./images/radial-chart.png);
-}
-
-.card.survey-4 {
-	height: 200px;
+	line-height: 200px;
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
 	position: relative;
 	text-align: center;
 	background-size: cover;
@@ -44,7 +21,4 @@
 
 .survey-title {
 	color: white;
-	font-size: 10vh !important;
-	display: flex;
-	justify-content: center;
 }
